syntax = "proto3";
package rarifyprotocol.rarimocore.rarimocore;

option go_package = "gitlab.com/rarify-protocol/rarimo-core/x/rarimocore/types";

message ChangeKey {
  string newKey = 1;
}

